--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: j_downloader
-description: "A new Flutter project."
+description: "Multi-Isolate Downloader developed for JHenTai."
 version: 0.0.1
-homepage: 
+homepage: https://github.com/jiangtian616/JDownloader
 
 environment:
   sdk: '>=3.3.0 <4.0.0'
@@ -15,7 +15,7 @@ dependencies:
   logging: 1.2.0
   sprintf: 7.0.0
   retry: 3.1.2
-  
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
