--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,9 @@ dependencies:
   uuid: 4.3.3
   dio: 5.4.1
   retry: 3.1.2
+  logger: 2.2.0
 
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
