--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ dependencies:
   dio: 5.4.1
   retry: 3.1.2
   logger: 2.2.0
-
+  flutter_socks_proxy: 0.0.3
   
 dev_dependencies:
   flutter_test:
