flutter_socks_proxy

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,9 @@ dependencies:
   dio: 5.4.1
   retry: 3.1.2
   logger: 2.2.0
-  flutter_socks_proxy: 0.0.3
+  flutter_socks_proxy:
+    # https://github.com/tayoji-io/socks_proxy/issues/7
+    git: https://github.com/jiangtian616/socks_proxy
   
 dev_dependencies:
   flutter_test:
